WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114135
[EFL] rendering was broken when scrolled ewk_view_single
https://bugs.webkit.org/show_bug.cgi?id=114135
Summary
[EFL] rendering was broken when scrolled ewk_view_single
Ryuan Choi
Reported
2013-04-07 19:23:17 PDT
When scrolled contents, ewk_view_single copied buffer on ewk_view_single using memcpy. But memcpy shouldn't be used when source buffer and destination buffer was overwrapped. Patch will be added.
Attachments
Patch
(2.27 KB, patch)
2013-04-07 19:28 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2013-04-07 19:28:42 PDT
Created
attachment 196819
[details]
Patch
Gyuyoung Kim
Comment 2
2013-04-07 21:33:40 PDT
Comment on
attachment 196819
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196819&action=review
rs=me
> Source/WebKit/efl/ChangeLog:3 > + [EFL][WK] rendering was broken when scrolled ewk_view_single
It looks [WK] prefix is meaningless. [WK1] or remove it.
Ryuan Choi
Comment 3
2013-04-08 00:23:57 PDT
Committed
r147897
: <
http://trac.webkit.org/changeset/147897
>
Ryuan Choi
Comment 4
2013-04-08 00:24:15 PDT
Comment on
attachment 196819
[details]
Patch thank you
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug