[EFL] rendering was broken when scrolled ewk_view_single https://bugs.webkit.org/show_bug.cgi?id=114135

Patch by Ryuan Choi <ryuan.choi@samsung.com> on 2013-04-08
Reviewed by Gyuyoung Kim.

ewk_view_single use memcpy() to copy previous buffer for scrolling, but
memcpy() should not be used when source buffer and destination buffer are
overwrapped.

* ewk/ewk_view_single.cpp:
(_ewk_view_screen_move):

Canonical link: https://commits.webkit.org/132526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147897 268f45cc-cd09-0410-ab3c-d52691b4dbfc